# tritongrader

./: README.md  pyproject.toml
.github/workflows/: e2e-tests.yml  security-tests.yml
docker_tests/cases/: run_test.sh
docker_tests/cases/header_check/grader/: grade.py
docker_tests/cases/header_check/submission/: submission.c
docker_tests/grader/: grade.py  run_autograder  setup.sh
docker_tests/tests/: run_test.sh
docker_tests/tests/sigabrt/: submission.c
e2e/: Dockerfile  run_all_cases.sh  run_test.sh
e2e/cases/header_banned_included/grader/: grade.py  validate.py
e2e/cases/header_banned_included/submission/: submission.c
e2e/cases/header_banned_none/grader/: grade.py  validate.py
e2e/cases/header_banned_none/submission/: submission.c
e2e/cases/leak/grader/: grade.py  validate.py
e2e/cases/leak/submission/: submission.c
e2e/cases/limitedperms/grader/: grade.py
e2e/cases/noleak/grader/: validate.py
e2e/wrapper/: harness.py  requirements.txt  run_autograder  setup.sh
example/: test_autograder.py
security_tests/: Dockerfile
security_tests/grader/: grade.py  harness.py  requirements.txt  run_autograder  setup.sh
security_tests/tests/forkbomb/: submission.c
security_tests/tests/spam/: submission.c
src/tritongrader/: autograder.py  formatter.py  runner.py
src/tritongrader/test_case/: basic_test_case.py  io_test_case.py  static_analysis_test_case.py  test_case_base.py
src/tritongrader/valparse/: valparse.py
wrappers/: .gitignore  build  first-stage  harness.py  requirements.txt  run_autograder  setup.sh
(+4 files in other folders)
