[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tritongrader"
version = "0.1.0"
authors = [
  { name="Jerry Yu" },
  { name="Michael Peng" },
]
description = "A lightweight Python package for building autograders."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/CSE29Spring2025/tritongrader"
